tests/baselines/reference/parserErrorRecoveryIfStatement6.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement6.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b) {
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      public f2() {
      ~~~~~~
!!! error TS1129: Statement expected.
      }
      f3() {
      }
    }
    